# extreme-weather-db

./: .gitignore  README.md  download_database.db  downloader.py  inspect_dataset.py  job.sh  metadata.yaml  pyproject.toml  test.ipynb
processor/: db_setup.py  main.py  processing.py  threshold_processing.py
results/: results.db  top10precipitation.nc  top10temperatureHigh.nc  top10wind.nc
scripts/: wind-download.py
src/: config.py
src/downloading/: download_database.db  merge_script.py
src/processing/: changePrecipitationYearlyBoundaries.py  databaseFunctions.py  processPrecipitation.py  processTemperature.py  processWind.py  processWindgust.py  processingFactory.py  processing_functions.py  processor.py  top10ProcessingDemo.ipynb
src/querying/: queryFunctions.py
src/utils/: unitConversion.py
streamlitVisualization/: extreme-weather-db.py
streamlitVisualization/pages/: top10.py
test/: databaseTests.py  processingTests.py  queryingTests.py
tests/: append_db_schema.py  check_db_schema.py  test_request.py
