[tool.poetry]
name = "extreme-weather-db"
version = "0.1.0"
description = ""
authors = ["Tilmann Diepenbruck <tdiepenb@smail.uni-koeln.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
