[tool.poetry]
name = "extreme-weather-db"
version = "0.1.0"
description = ""
authors = ["Tilmann Diepenbruck <tdiepenb@smail.uni-koeln.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.9.16"
jupyter = "^1.0.0"         # Compatible version for Python 3.9
cdsapi = "^0.6.0"          # Compatible version for Python 3.9
xarray = "^2023.9.0"       # Latest version supporting Python 3.9
numpy = "^1.24.4"          # Latest version supporting Python 3.9
netcdf4 = "^1.6.4"         # Latest version supporting Python 3.9

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
